fix dropdown on small screens

--- a/frontend/less/espo/custom.less
+++ b/frontend/less/espo/custom.less
@@ -1829,4 +1829,13 @@ pre > code {
     .panel-body > div:first-child > .list:first-child {
         margin-top: 0;
     }
+
+    .list > .table {
+        .dropdown-menu {
+            position: static !important;
+        }
+        .pull-right.open > .btn {
+            float: right;
+        }
+    }
 }
